working github pull for real

--- a/server/moodhub/Gemfile
+++ b/server/moodhub/Gemfile
@@ -55,6 +55,7 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 
 
 #custom
+gem 'dotenv-rails'
 gem 'github_api'
 gem 'pry-rails', :group => :development
 
