extra fields for support of rekogntion data

--- a/server/moodhub/test/fixtures/health_statuses.yml
+++ b/server/moodhub/test/fixtures/health_statuses.yml
@@ -3,7 +3,11 @@
 one:
   user_id: 1
   s3_image_id: MyString
+  happiness_level: 1.5
+  rekognition_dump: MyText
 
 two:
   user_id: 1
   s3_image_id: MyString
+  happiness_level: 1.5
+  rekognition_dump: MyText
